@@ -1,8 +1,16 @@
 /*
- * HTML5 support for IE 8 and older browsers
+ * ADD SUPPORT FOR HTML AND HTML5 TAGS IN IE8 AND OLDER
  */
 
-document.createElement('header'); 
-document.createElement('nav'); 
 document.createElement('article'); 
-document.createElement('footer');
+document.createElement('aside'); 
+document.createElement('details'); 
+document.createElement('figcaption');
+document.createElement('figure');
+document.createElement('footer'); 
+document.createElement('header'); 
+document.createElement('hgroup'); 
+document.createElement('main');
+document.createElement('menu'); 
+document.createElement('nav'); 
+document.createElement('section');
