@@ -1,7 +1,7 @@
 /*
 Theme Name: DarkElements
 Theme URI: http://www.guidovanderleest.nl/darkelements
-Version: 2.0
+Version: 2.1
 Author: Guido van der Leest
 Author URI: http://www.guidovanderleest.nl
 Description: DarkElements is a free, basic, clean, minimalistic, responsive, mobile friendly WordPress theme. Sidebar on left side, left side navigation, 3 widget-area's in footer, custom header-image, custom background and display logo or blogname and description are included. Besides this no theme settingspage, no fancy options, no slideshow, this one only has the basic options. Enjoy. 
@@ -17,7 +17,7 @@ DarkElements is licensed under the GPL
 
 /* RESET STYLESHEET 
 Source: http://meyerweb.com/eric/tools/css/reset
-Copyright author: Eric Meyer
+Author: Eric Meyer
 Author URI: http://meyerweb.com/ 
 License: none (public domain) 
 */
@@ -31,14 +31,16 @@ menu, nav, output, ruby, section, summary, time, mark, audio, video {
 	margin:0;
 	padding:0;
 	border:0;
+	font-family:inherit;
 	font-size:100%;
-	font:inherit;
+	font-style:inherit;
+	font-weight:inherit;
 	vertical-align:baseline;
 }
 
-/* HTML5 display-role reset for older browsers */
-article, aside, details, figcaption, figure, footer, header, hgroup, menu, nav, section {
-	display: block;
+/* RESET OF HTML AND HTML5 TAGS FOR OLDER BROWSERS */
+article, aside, details, figcaption, figure, footer, header, hgroup, main, menu, nav, section {
+	display:block;
 }
 
 body {
